--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Tableau de contôle Admin</title>
     <link rel="stylesheet" href="styles-admin.css"> <!-- Lien vers le fichier CSS -->
 </head>
 <body class="admin-page">
@@ -13,36 +13,36 @@
         </div>
         <nav>
             <ul>
-                <li><a href="admin.html">Dashboard</a></li>
-                <li><a href="manage-users.html">Manage Users</a></li>
-                <li><a href="settings.html">Settings</a></li>
-                <li><a href="#" id="logoutBtn">Logout</a></li>
+                <li><a href="admin.html">Panel</a></li>
+                <li><a href="manage-users.html">Gérer les utilisateurs</a></li>
+                <li><a href="settings.html">Paramètres</a></li>
+                <li><a href="#" id="logoutBtn">Se déconnecter</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Admin Dashboard</h1>
+        <h1>Tableau de contrôle Admin</h1>
         <section class="admin-content">
             <div class="stats">
                 <div class="stat-card">
-                    <h2>Total Users</h2>
-                    <p id="totalUsers">123</p>
+                    <h2>Total d'utilisateurs</h2>
+                    <p id="totalUsers">3</p>
                 </div>
                 <div class="stat-card">
-                    <h2>Recent Activity</h2>
+                    <h2>Dernière activité</h2>
                     <p id="recentActivity">Last login: 2024-08-19</p>
                 </div>
             </div>
             <div class="actions">
                 <h2>Actions</h2>
-                <button class="btn">Manage Content</button>
-                <button class="btn">View Reports</button>
-                <button class="btn">Update Settings</button>
+                <button class="btn">Gérer le contenu</button>
+                <button class="btn">Voir les reports</button>
+                <button class="btn">Mettre a jour les paramètres</button>
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
+        <p>&copy; 2024 Ata-El-Haq. Tous droits réservés.</p>
     </footer>
     <script src="app.js"></script> <!-- Lien vers le fichier JavaScript -->
 </body>
