--- a/manage-users.html
+++ b/manage-users.html
@@ -36,8 +36,8 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>admin</td>
-                        <td>admin@example.com</td>
+                        <td>Zakaria</td>
+                        <td>zakaria.bennani2008@gmail.com</td>
                         <td>Administrateur</td>
                         <td>
                             <button class="btn edit-btn">Modifier</button>
