--- a/manage-users.html
+++ b/manage-users.html
@@ -16,7 +16,7 @@
                 <li><a href="admin.html">Dashboard</a></li>
                 <li><a href="manage-users.html">Gestion des utilisateurs</a></li>
                 <li><a href="settings.html">Paramètres</a></li>
-                <li><a href="#" id="logoutBtn">Déconnexion</a></li>
+                <li><a href="index.html" id="logoutBtn">Déconnexion</a></li>
             </ul>
         </nav>
     </header>
@@ -50,7 +50,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Votre Entreprise. Tous droits réservés.</p>
+        <p>&copy; 2024 Ata-El-Haq. Tous droits réservés.</p>
     </footer>
 
     <script src="scripts-users.js"></script>
